--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-mainClassName = 'com.dclaussen.CashRegisterMain'
+mainClassName = 'com.dclaus.CashRegisterMain'
 
 run {
     standardInput = System.in
